--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>UNEJ</title>
+<title>ABOUT</title>
 <link href="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UNEJKU.css" rel="stylesheet" type="text/css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,9 +25,9 @@
     <nav class="secondary_header" id="menu">
       <ul>
         <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/home.html">HOME</a></li>
-		<li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/profil.html">PROFIL</a></li>
+		<li><a href="C:\Users\HD\Desktop\Folder Baru (2)\UNEJ\PROFIL\HDPROJECT\Structure.html">PROFIL</a></li>
         <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/about.html">ABOUT UNEJ</a></li>
-        <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/struktur organitation.html">ORGANITATION</li>
+        <li><a href="C:\Users\HD\Desktop\Folder Baru (2)\UNEJ\PROFIL\organitation.html">ORGANITATION</li>
       </ul>
     </nav>
   </header>
@@ -67,8 +67,8 @@
   <div class="social">
     <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/SISTER UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
     <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/KAWANDA.png" width="100" alt="" class="thumbnail"></a></p>
-    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login?service=http%3A%2F%2Fsikd.unej.ac.id%2Findex.php"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
-    <p class="social_icon"><a href="https://uc3.unej.ac.id/home/"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UC3UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/HDPROJECT/index1.html"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UC3UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
   </div>
     <div class="row blockDisplay">
     <div class="column_half left_half">
