--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>UNEJ</title>
+<title>UNIVERSITAS JEMBER</title>
 <link href="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UNEJKU.css" rel="stylesheet" type="text/css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,48 +24,44 @@
     <nav class="secondary_header" id="menu">
       <ul>
         <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/home.html">HOME</a></li>
-		<li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/profil.html">PROFIL</a></li>
+		<li><a href="C:\Users\HD\Desktop\Folder Baru (2)\UNEJ\PROFIL\HDPROJECT\Structure.html">PROFIL</a></li>
         <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/about.html">ABOUT UNEJ</a></li>
-        <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/struktur organitation.html">ORGANITATION</li>
+        <li><a href="C:\Users\HD\Desktop\Folder Baru (2)\UNEJ\PROFIL\organitation.html">ORGANITATION</li>
       </ul>
     </nav>
   </header>
   <section>
     <h2 class="noDisplay">Main Content</h2>
-    <article class="left_article">
-      <h3></h3>
-      <p></p>
-      <p></p>
-    </article>
+
     <aside class="right_article"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/unej2018.JPG" alt="" width="1920" height="1000" class="placeholder"/> </aside>
   </section>
   <div class="row">
     <div class="columns">
-      <p class="thumbnail_align"> <img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/DSC0366-1-1280x550.jpg" alt="" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <a href="https://ilkom.unej.ac.id/"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/DSC0366-1-1280x550.jpg" alt="" class="thumbnail"></a> </p>
       <h4>ILMU KOMPUTER</h4>
       <p></p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/Fakultas Ekonomi i.jpg" alt="" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <a href="http://feb.unej.ac.id/"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/Fakultas Ekonomi i.jpg" alt="" class="thumbnail"></a> </p>
       <h4>EKONOMI BISNIS</h4>
       <p></p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/hukum.jpg" alt="" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <a href="http://fh.unej.ac.id/"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/hukum.jpg" alt="" class="thumbnail"></a> </p>
       <h4>HUKUM</h4>
       <p></p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/FMIPA.png" alt="" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <a href="http://fmipa.unej.ac.id/"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/FMIPA.png" alt="" class="thumbnail"></a> </p>
       <h4>MIPA</h4>
       <p></p>
     </div>
   </div>
   <div class="social">
-    <p class="social_icon"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/SISTER UNEJ.png" width="100" alt="" class="thumbnail"/></p>
-    <p class="social_icon"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/KAWANDA.png" width="100" alt="" class="thumbnail"/></p>
-    <p class="social_icon"><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/sister.html"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
-    <p class="social_icon"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UC3UNEJ.png" width="100" alt="" class="thumbnail"/></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/SISTER UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/KAWANDA.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/HDPROJECT/index1.html"><img src="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/UC3UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
   </div>
     <div class="row blockDisplay">
     <div class="column_half left_half">
