--- a/organitation.html
+++ b/organitation.html
@@ -25,21 +25,14 @@
     <nav class="secondary_header" id="menu">
       <ul>
 		  <li><a href="home.html">HOME</a></li>
-		  <li><a href="profil.html">PROFIL</a></li>
+		  <li><a href="C:\Users\HD\Desktop\Folder Baru (2)\UNEJ\PROFIL\HDPROJECT\Structure.html">PROFIL</a></li>
         <li><a href="about.html">ABOUT UNEJ</a></li>
-        <li>ORGANITATION</li>
+        <li><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/UNEJ/PROFIL/organitation.html">ORGANITATION</li>
       </ul>
     </nav>
-    </div>
-  </header>
   <section>
     <h2 class="noDisplay">Main Content</h2>
-    <article class="left_article">
-      <h3></h3>
-      <p></p>
-      <p></p>
-    </article>
-    <aside class="right_article"><img src="struktur organisasi.JPG" alt="" width="1920" height="1000" class="placeholder"/> </aside>
+<aside class="right_article"><img src="struktur organisasi.JPG" alt="" width="1920" height="1000" class="placeholder"/> </aside>
   </section>
   <div class="row">
     <div class="columns">
@@ -64,10 +57,10 @@
     </div>
   </div>
   <div class="social">
-    <p class="social_icon"><img src="SISTER UNEJ.png" width="100" alt="" class="thumbnail"/></p>
-    <p class="social_icon"><img src="KAWANDA.png" width="100" alt="" class="thumbnail"/></p>
-    <p class="social_icon"><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/PROFIL/sister.html"><img src="fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
-    <p class="social_icon"><img src="UC3UNEJ.png" width="100" alt="" class="thumbnail"/></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="SISTER UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="KAWANDA.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="https://sso.unej.ac.id/cas/login"><img src="fbunej1.png" width="100" alt="" class="thumbnail"></a></p>
+    <p class="social_icon"><a href="file:///C|/Users/HD/Desktop/Folder Baru (2)/HDPROJECT/index1.html"><img src="UC3UNEJ.png" width="100" alt="" class="thumbnail"></a></p>
   </div>
     <div class="row blockDisplay">
     <div class="column_half left_half">
